[project]
name = "osi-dump"
version = "0.1.8"
description = "OpenStack information dump tool"
readme = "README.md"
authors = [{ name = "TVKain" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = [
    "typer",
    "openstacksdk==3.3.0",
    "pydantic",
    "pandas",
    "openpyxl",
    "numpy",
]


[project.scripts]
osi-dump = "osi_dump.cli:app"

[project.optional-dependencies]
test = ["pytest"]
